--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -57,173 +57,167 @@ window.onload = load_all
         <hr />
 @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    <div class="form-horizontal">
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <!--AGREGAR UN PROYECTO DE REQUERIMIENTO-->
+        <div class="form-group">
 
-        <!--AGREGAR UN ID DE REQUERIMIENTO-->
+            <div class="col-md-6">
+                <label class="control-label col-md-3">Proyecto</label>
+                @Html.EditorFor(model => Model.nProy, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                @Html.HiddenFor(model => model.Requerimientos.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
 
+            </div><br /><br />
 
-            <!--AGREGAR UN PROYECTO DE REQUERIMIENTO-->
-            <div class="form-group">
-                
-                <div class="col-md-10">
-                    <label class="control-label col-md-2">Proyecto</label>
-                    @Html.DisplayFor(model => Model.nProy)
-                    @{ 
-                        var id = Model.nProy;
-                    }
-                    @Html.HiddenFor(model => model.Requerimientos.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
-                   
-                </div><br/><br />
+        </div>
 
-            </div>
-        
-               <div class="form-group">
-            
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Nombre:</label>
+        <div class="form-group">
+
+            <div class="col-md-6">
+                <label class="control-label col-md-3">Nombre:</label>
                 @Html.EditorFor(model => model.Requerimientos.nombre, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Requerimientos.nombre, "", new { @class = "text-danger" })
             </div><br /><br />
         </div>
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Sprint:</label>
-                @Html.EditorFor(model => model.Requerimientos.sprint, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Requerimientos.sprint, "", new { @class = "text-danger" })
-            </div><br /><br />
-        </div>
-        <div class="form-group">
-            
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Modulo:</label>
-                @Html.EditorFor(model => model.Requerimientos.modulo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Requerimientos.modulo, "", new { @class = "text-danger" })
-            </div><br /><br />
-        </div>
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Prioridad:</label>
-                @Html.EditorFor(model => model.Requerimientos.prioridad , new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Requerimientos.prioridad, "", new { @class = "text-danger" })
-            </div><br /><br />
-        </div>
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Esfuerzo:</label>
-                @Html.EditorFor(model => model.Requerimientos.esfuerzo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Requerimientos.esfuerzo, "", new { @class = "text-danger" })
-            </div><br /><br />
-        </div>
 
-        <div class="form-group">
-            
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Descripcion:</label>
-                @Html.TextAreaFor(model => model.Requerimientos.descripcion, new { @class = "form-control", rows = "4", placeholder = "250 Carácteres máximo" })
-                @Html.ValidationMessageFor(model => model.Requerimientos.descripcion, "", new { @class = "text-danger" })
-            </div><br /><br /><br /><br /><br />
-        </div>
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Observaciones:</label>
-                @Html.TextAreaFor(model => model.Requerimientos.observaciones, new { @class = "form-control", rows = "4", placeholder = "250 Carácteres máximo" })
-                @Html.ValidationMessageFor(model => model.Requerimientos.observaciones, "", new { @class = "text-danger" })
-            </div><br /><br /><br /><br /><br />
-        </div><br />
-
-
-        <div class="form-group">
-            
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.ImagenRF, htmlAttributes: new { @class = "control-label col-md-2" })
-    <input type="file" id="image1" name="imagen1"/>
-    </div><br /> <br />   
-        </div>
-         <div class="form-group">
-          
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Fuente:</label>
-                
-                @Html.DropDownListFor(model => model.Requerimientos.fuente, new SelectList(ViewBag.Lista, "cedula", "names"), new {  @class = "form-control" })
-            </div><br /><br />
-        </div>    <br />
-
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Responsable 1:</label>
-                @Html.DropDownListFor(model => model.Requerimientos.responsable1, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
-            </div><br /><br />
-        </div><br />
-        <div class="form-group">
-            
-            <div class="col-md-10">
-                <label class="control-label col-md-2">Responsable 2:</label>
-                @Html.DropDownListFor(model => model.Requerimientos.responsable2, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
-            </div><br /><br />
-        </div>    <br />
-
-        <div class="form-group">
-            
-            <div class="col-md-12">
-                <label class="control-label col-md-10">Fecha Inicial:</label>
-                @Html.TextBoxFor(model => model.Requerimientos.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
-            </div>
-        </div><br /><br />
-
-        <div class="form-group">
-           
-            <div class="col-md-10">
-                <label class="control-label col-md-10">Fecha Final:</label>
-                @Html.TextBoxFor(model => model.Requerimientos.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
-            </div>
-        </div><br /><br /><br /><br />
-
-
-                @*Criterio De Aceptacion*@
-                <label class="control-label col-md-10">Criterios de aceptacion:</label><br />
-                @Html.HiddenFor(model => model.values, new { @id = "output" })
-                <input type="text" id="output" value=" " style="display:none"><br/>
-
-                <a onclick="add_textbox()" class="btn btn-primary">Agregar Criterio</a>
-                <div id="textboxes">
-                <br/><br />
-                </div>
-
-
-                @*Criterio De Aceptacion*@
- 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                       @* @Html.ActionLink("Crear", "Create", new { NProyecto = id }, new { @class = "btn btn-success", @style = "color:white" })*@
-                        <input type="submit" value="Aceptar" class="btn btn-primary" />
-                        <div class="btn btn-danger" style="color:white;" />
-                        @Html.ActionLink("Cancelar", "Index", null, new { nombreProyecto = Request.Params["NombProy"] }, new { @style = "color:#FFFFFF;" })
-                    </div>
+        <fieldset name="estimacioninfo">
+            <legend>Datos de estimacion</legend>
+            <div class="form-group">
+                <div class="col-md-6 ">
+                    <label class="control-label col-md-3">Esfuerzo:</label>
+                    @Html.EditorFor(model => model.Requerimientos.esfuerzo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.esfuerzo, "", new { @class = "text-danger" })
                 </div><br /><br />
-}
-           
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Prioridad:</label>
+                    @Html.EditorFor(model => model.Requerimientos.prioridad, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.prioridad, "", new { @class = "text-danger" })
+                </div><br /><br />
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Fecha Inicial:</label>
+                    @Html.TextBoxFor(model => model.Requerimientos.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
+                </div><br /><br />
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Fecha Final:</label>
+                    @Html.TextBoxFor(model => model.Requerimientos.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
+                </div><br /><br />
+            </div>
+            <div class="form-group">
+
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Fuente:</label>
+                    @Html.DropDownListFor(model => model.Requerimientos.fuente, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
+                </div><br /><br />
+            </div>    <br />
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Responsable 1:</label>
+                    @Html.DropDownListFor(model => model.Requerimientos.responsable1, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
+                </div><br /><br />
+            </div><br />
+            <div class="form-group">
+
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Responsable 2:</label>
+                    @Html.DropDownListFor(model => model.Requerimientos.responsable2, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
+                </div><br /><br />
+            </div>    <br />
+            </fieldset>
+        <fieldset name="especificacioninfo">
+            <legend>Espeficicacion de Requerimiento Funcional</legend>
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Descripcion:</label>
+                    @Html.TextAreaFor(model => model.Requerimientos.descripcion, new { @class = "form-control", rows = "4", placeholder = "250 Carácteres máximo" })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.descripcion, "", new { @class = "text-danger" })
+                </div><br /><br /><br /><br /><br />
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Observaciones:</label>
+                    @Html.TextAreaFor(model => model.Requerimientos.observaciones, new { @class = "form-control", rows = "4", placeholder = "250 Carácteres máximo" })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.observaciones, "", new { @class = "text-danger" })
+                </div><br /><br /><br /><br /><br />
+            </div><br />
+
+            </fieldset>
+        <fieldset name="generalesinfo">
+            <legend>Datos Generales</legend>
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Modulo:</label>
+                    @Html.EditorFor(model => model.Requerimientos.modulo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.modulo, "", new { @class = "text-danger" })
+                </div><br /><br />
+            </div>
+            <div class="form-group">
+                <div class="col-md-6">
+                    <label class="control-label col-md-3">Sprint:</label>
+                    @Html.EditorFor(model => model.Requerimientos.sprint, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.sprint, "", new { @class = "text-danger" })
+                </div><br /><br />
+            </div>
+            <div class="form-group">
+                <div class="col-md-6">
+                    @Html.LabelFor(model => model.ImagenRF, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <input type="file" id="image1" name="imagen1" />
+                </div><br /> <br />
+            </div>
+
+        </fieldset>
+        <fieldset name="generalesinfo">
+            <legend>Criterios De Aceptacion</legend>
+            @*Criterio De Aceptacion*@
+            <label class="control-label col-md-3">Criterios de aceptacion:</label><br />
+            @Html.HiddenFor(model => model.values, new { @id = "output" })
+            <input type="text" id="output" value=" " style="display:none"><br />
+
+            <a onclick="add_textbox()" class="btn btn-primary">Agregar Criterio</a>
+            <div id="textboxes">
+                <br /><br />
+            </div>
+        </fieldset>
+
+            @*Criterio De Aceptacion*@
+
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    @* @Html.ActionLink("Crear", "Create", new { NProyecto = id }, new { @class = "btn btn-success", @style = "color:white" })*@
+                    <input type="submit" value="Aceptar" class="btn btn-primary" />
+                    <div class="btn btn-danger" style="color:white;" />
+                    @Html.ActionLink("Cancelar", "Index", null, new { nombreProyecto = Request.Params["NombProy"] }, new { @style = "color:#FFFFFF;" })
+                </div>
+            </div><br /><br />
+</div>
+        }
 
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 
-    <script type="text/javascript">
-                         $(function () {
-                             $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
-                         });
-                         $(".datepicker").on("dp.change", function (e) {
-                             $('.datepicker2').data("DatePicker").setMinDate(e.date);
-                         });
-                         $(".datepicker2").on("dp.change", function (e) {
-                             $('.datepicker').data("DatePicker").setMaxDate(e.date);
-                         });
-    </script>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
 
-}
+            <script type="text/javascript">
+                $(function () {
+                    $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
+                });
+                $(".datepicker").on("dp.change", function (e) {
+                    $('.datepicker2').data("DatePicker").setMinDate(e.date);
+                });
+                $(".datepicker2").on("dp.change", function (e) {
+                    $('.datepicker').data("DatePicker").setMaxDate(e.date);
+                });
+            </script>
+
+        }
